--- a/WebApplication(DotNet)/Views/Home/Index.cshtml
+++ b/WebApplication(DotNet)/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to the World of Appedology, We are DevOps Engineers Here To Solve Your Problem!</h1>
+    <h1 class="display-4">Welccome hallar, to the World of Appedology, We are DevOps Engineers Here To Solve Your Problem!</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
